# OOAD_TEAM1

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: deploy.yml  ooi-system-test.yml
cmake/: SystemTests.cmake
docs/ai-input/: ooa_summary.md  ood_summary.md  ooi_summary.md  week1_summary.md
docs/ai-output/: SRS_PLAN.md  sdd.md  sdd_class_diagram.puml  sdd_sd_charging.puml  sdd_sd_dust_timer.puml  sdd_sd_low_battery.puml  sdd_sd_obstacle_avoidance.puml  sdd_sd_power_button.puml  sdd_sd_start_button.puml  sdd_state_mode_transition.puml  srs.md  srs_diagrams.puml  srs_ssd_sensor_events.puml  srs_ssd_user_control.puml
include/rvc/: BatteryDriver.hpp  CleanerDriver.hpp  Controller.hpp  Direction.hpp  DustProcessor.hpp  DustSensorDriver.hpp  Modes.hpp  MotorDriver.hpp  ObstacleProcessor.hpp  ObstacleSensorDriver.hpp  OperatingMode.hpp  RobotController.hpp
simulator/: main.cpp  rvc_simulator_main.cpp
src/: main.cpp
src/rvc/: BatteryDriver.cpp  CleanerDriver.cpp  Controller.cpp  DustProcessor.cpp  DustSensorDriver.cpp  Modes.cpp  MotorDriver.cpp  ObstacleProcessor.cpp  ObstacleSensorDriver.cpp  RobotController.cpp
system_tests/tc/: TC01_PowerButtonPressed1.rvc  TC02_PowerButtonPressed2.rvc  TC03_StartButtonPressed1.rvc  TC04_StartButtonPressed2.rvc  TC05_StartButtonPressed3.rvc  TC06_StartButtonPressed4.rvc  TC07_StartButtonPressed5.rvc  TC08_ChargeBattery1.rvc  TC09_ChargeBattery2.rvc  TC10_ChargeBattery3.rvc  TC11_ChargeBattery4.rvc  TC12_ChargeBattery5.rvc  TC13_StopCharging1.rvc  TC14_StopCharging2.rvc  TC15_LowBatteryDetected1.rvc  TC16_LowBatteryDetected2.rvc  TC17_LowBatteryDetected3.rvc  TC18_LowBatteryCleared1.rvc  TC19_DustDetected1.rvc  TC20_DustDetected2.rvc  TC21_DustDetected3.rvc  TC22_DustDetected4.rvc  TC23_DustCleared1.rvc  TC24_ObstacleDetected1.rvc  TC25_ObstacleDetected2.rvc  TC26_ObstacleDetected3.rvc  TC27_ObstacleDetected4.rvc  TC28_ObstacleDetected5.rvc  TC29_ObstacleDetected6.rvc  TC30_ObstacleDetected7.rvc  TC31_ObstacleDetected8.rvc  TC32_ObstacleDetected9.rvc  TC33_ObstacleDetected10.rvc  TC34_ObstacleDetectedBoost1.rvc  TC35_ObstacleDetectedBoost2.rvc  TC36_ObstacleDetectedBoost3.rvc  TC37_ObstacleDetectedBoost4.rvc  TC38_ObstacleDetectedBoost5.rvc  TC39_ObstacleDetectedBoost6.rvc  TC40_ObstacleDetectedBoost7.rvc  (+5 more)
tests/: BatteryDriverTest.cpp  ButtonTest.cpp  ControllerChargeBatteryTest.cpp  ControllerEnterLowBatteryModeTest.cpp  ControllerLowBatteryStopChargingTest.cpp  ControllerObstacleDetectedTest.cpp  ControllerPowerBatteryTest.cpp  ControllerStopChargingTest.cpp  ControllerTurnOffSystemTest.cpp  ControllerTurnOnSystemTest.cpp  DustDetectedTest.cpp  ModeTest  ModeTest.cpp  MotorDriverTest.cpp  ObstacleDetectedTest.cpp  PowerBatteryModeTest.cpp  RobotControllerTest.cpp  StartButtonPressedTest.cpp
vibe/: CMakeLists.txt
vibe/include/rvc/: BatteryDriver.hpp  CleanerDriver.hpp  Controller.hpp  Direction.hpp  DustProcessor.hpp  DustSensorDriver.hpp  MotorDriver.hpp  ObstacleProcessor.hpp  ObstacleSensorDriver.hpp  OperatingMode.hpp
vibe/simulator/: main.cpp
vibe/src/: Controller.cpp  DustProcessor.cpp  ObstacleProcessor.cpp  OperatingMode.cpp
vibe/tests/system_tests/: SYSTEM_TEST_TRACEABILITY.md
vibe/tests/system_tests/tc/: N01_start_while_off_does_not_enter_normal.rvc  N02_dust_while_off_does_not_enter_boost.rvc  N03_dust_while_standby_does_not_enter_boost.rvc  N04_dust_while_low_battery_does_not_enter_boost.rvc  N05_timer_while_off_no_change.rvc  N06_timer_while_standby_no_change.rvc  N07_timer_while_normal_no_change.rvc  N08_charge_while_normal_rejected.rvc  N09_charge_while_boost_rejected.rvc  N10_obstacle_while_off_does_not_start_motor.rvc  N11_obstacle_while_standby_does_not_start_motor.rvc  N12_obstacle_while_low_battery_does_not_start_motor.rvc  N13_start_while_low_battery_does_not_enter_normal.rvc  N14_repeated_start_only_valid_toggle.rvc  N15_repeated_power_only_safe_toggle.rvc  N16_stop_charging_when_not_charging_keeps_off.rvc  N17_repeated_stop_charging_remains_safe.rvc  N18_low_battery_while_off_ignored.rvc  N19_repeated_low_battery_remains_low_battery.rvc  N20_low_battery_cleared_outside_low_battery_no_invalid_transition.rvc  N21_charge_tick_not_charging_no_change.rvc  N22_clock_tick_while_off_no_change.rvc  N23_clock_tick_standby_no_sensor_no_change.rvc  N24_clock_tick_normal_no_sensor_no_change.rvc  N25_dust_while_charging_ignored.rvc  N26_obstacle_front_clear_standby_no_motor.rvc  N27_obstacle_all_blocked_standby_no_motor.rvc  N28_timer_after_boost_return_stays_normal.rvc  N29_charge_after_cleaning_mode_rejected.rvc  N30_unknown_command_no_crash.rvc  P01_power_on_enters_standby.rvc  P02_power_off_from_standby_returns_off.rvc  P03_start_from_standby_enters_normal.rvc  P04_start_from_normal_returns_standby.rvc  P05_dust_in_normal_enters_boost.rvc  P06_timer_in_boost_returns_normal.rvc  P07_low_battery_in_normal_stops_motor.rvc  P08_low_battery_in_boost_stops_motor.rvc  P09_charging_accepted_in_standby.rvc  P10_stop_charging_safe_non_cleaning.rvc  (+2 more)
vibe/tests/unit_tests/: TEST_TRACEABILITY.md  rvc_unit_tests.cpp
